LocalStorage/Reset/Update imc.css

--- a/html/tabela.html
+++ b/html/tabela.html
@@ -60,8 +60,14 @@
 
       <fieldset>
         <button type="submit" id="form">Enviar sua resposta</button>
-        <button type="reset" class="resetBtn">Refazer o Formulário</button>
+        <button type="reset" id="resetBtn">Refazer o Formulário</button>
       </fieldset>
+
+      <div>
+        <label for="buscar">Buscar</label>
+        <input type="text" id="buscar" placeholder="informe o nome..." />
+        <button type="button" id="buscarBtn">Buscar</button>
+      </div>
     </form>
     <span id="imc"></span>
     <h2>Informações sobre os Esportes</h2>
