--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programa de Apoio a Atletas DM1</title>
     <link rel="stylesheet" href="./styles/index.css" />
-    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favi.jpeg" type="image/x-icon" />
   </head>
 
   <body>
@@ -29,7 +29,7 @@
           Fabio Reimberg<br />
           Felipe Diniz Farias <br />
           Milton Sérgio Brito<br />
-          Thor Britto Magalhães <br>
+          Thor Britto Magalhães <br />
           Fábio Pereira Amaral
         </td>
         <td>
@@ -39,7 +39,9 @@
       </tr>
     </table>
 
-    <img src="/img/projetoimag.jfif" />
+    <div class="img-container">
+      <img src="/img/prototipo.jpeg" />
+    </div>
 
     <footer>
       <p>
